# bazel-garden

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  project.garden.yaml
projects/calculator/: BUILD.bazel  calculator.garden.yaml
projects/python_web/: BUILD.bazel  index.html  python_web.garden.yaml  python_web.py  python_web_test.py
projects/python_web/templates/: index.html
